--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -12,10 +12,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 
+<?import javafx.scene.control.SplitPane?>
 <fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
          title="KeyboardFlashCards" minWidth="450" minHeight="600" onCloseRequest="#handleExit">
   <icons>
-    <Image url="@/images/address_book_32.png" />
+    <Image url="@/images/icon.png" />
   </icons>
   <scene>
     <Scene>
@@ -24,44 +25,53 @@
         <URL value="@Extensions.css" />
       </stylesheets>
          <VBox>
-            <children>
-           <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
-             <Menu mnemonicParsing="false" text="File">
-               <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
-             </Menu>
-             <Menu mnemonicParsing="false" text="Help">
-               <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
-             </Menu>
-           </MenuBar>
-               <HBox>
-                  <children>
+           <children>
+             <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
+               <Menu mnemonicParsing="false" text="File">
+                 <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
+               </Menu>
+               <Menu mnemonicParsing="false" text="Help">
+                 <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
+               </Menu>
+             </MenuBar>
 
-                    <VBox fx:id="flashCardList" minWidth="340.0" prefWidth="340.0" styleClass="pane-with-border">
+             <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512"
+                        focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+               <items>
+
+                 <VBox fx:id="flashCardList" minWidth="100.0" prefWidth="100.0" styleClass="pane-with-border">
                    <padding>
                      <Insets bottom="10" left="10" right="10" top="10" />
                    </padding>
                    <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS" />
                  </VBox>
 
-                  <VBox>
+                 <VBox fx:id = "centreBlock" minWidth="300" prefWidth="300" >
+                   <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
+                     <padding>
+                       <Insets bottom="5" left="10" right="10" top="5" />
+                     </padding>
+                   </StackPane>
 
-                    <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
-                      <padding>
-                        <Insets bottom="5" left="10" right="10" top="5" />
-                      </padding>
-                    </StackPane>
+                   <StackPane fx:id="resultDisplayPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
+                     <padding>
+                       <Insets bottom="5" left="10" right="10" top="5" />
+                     </padding>
+                   </StackPane>
 
-                    <StackPane fx:id="resultDisplayPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
-                      <padding>
-                        <Insets bottom="5" left="10" right="10" top="5" />
-                      </padding>
-                    </StackPane>
+                   <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
+                 </VBox>
 
-                    <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
-                  </VBox>
-                  </children>
-               </HBox>
-            </children>
+                 <VBox fx:id="reminderList" alignment="CENTER" minWidth="100.0" prefWidth="100.0" styleClass="pane-with-border">
+                   <padding>
+                     <Insets bottom="10" left="10" right="10" top="10" />
+                   </padding>
+                   <StackPane fx:id="reminderListPanelPlaceholder" VBox.vgrow="ALWAYS" />
+
+                 </VBox>
+               </items>
+             </SplitPane>
+           </children>
          </VBox>
     </Scene>
   </scene>
