--- a/src/main/resources/view/FinancialTrackerWindow.fxml
+++ b/src/main/resources/view/FinancialTrackerWindow.fxml
@@ -14,23 +14,23 @@
            </Menu>
        </MenuBar>
 
-                <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
+       <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
            <padding>
                <Insets bottom="5" left="10" right="10" top="5" />
            </padding>
        </StackPane>
 
-                <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100" minHeight="100" prefHeight="100" styleClass="pane-with-border" VBox.vgrow="NEVER">
+       <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100" minHeight="100" prefHeight="100" styleClass="pane-with-border" VBox.vgrow="NEVER">
            <padding>
                <Insets bottom="5" left="10" right="10" top="5" />
            </padding>
        </StackPane>
 
-                <VBox fx:id="personList" minWidth="340" prefWidth="340" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
+       <VBox fx:id="expenseList" minWidth="340" prefWidth="340" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
            <padding>
                <Insets bottom="10" left="10" right="10" top="10" />
            </padding>
-           <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS" />
+           <StackPane fx:id="expensePlaceholder" VBox.vgrow="ALWAYS" />
        </VBox>
 
                 <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
