--- a/src/main/resources/view/Cashier.fxml
+++ b/src/main/resources/view/Cashier.fxml
@@ -1,46 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 
 <AnchorPane fx:id="cashier" prefHeight="532.0" prefWidth="690.0" stylesheets="@Extensions.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-      <GridPane alignment="CENTER" layoutY="2.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <columnConstraints>
-          <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="688.0" minWidth="10.0" prefWidth="677.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="500.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="35.0" valignment="CENTER" vgrow="ALWAYS" />
-        </rowConstraints>
-         <children>
-            <TableView fx:id="tableView">
-              <columns>
-                <TableColumn fx:id="idCol" prefWidth="60.0" text="No." />
-                <TableColumn fx:id="descriptionCol" prefWidth="330.0" text="Item Description" />
-                  <TableColumn fx:id="priceCol" text="Price" />
-                  <TableColumn fx:id="quantityCol" text="Quantity" />
-                  <TableColumn fx:id="subtotalCol" prefWidth="120.0" text="Subtotal" />
-              </columns>
-               <GridPane.margin>
-                  <Insets />
-               </GridPane.margin>
-            </TableView>
-            <TextField prefHeight="30.0" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets bottom="5.0" top="5.0" />
-               </GridPane.margin>
-               <padding>
-                  <Insets bottom="5.0" top="5.0" />
-               </padding>
-            </TextField>
-         </children>
-      </GridPane>
+      <TableView fx:id="tableView" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <columns>
+          <TableColumn fx:id="idCol" prefWidth="60.0" text="No." />
+          <TableColumn fx:id="descriptionCol" prefWidth="330.0" text="Item Description" />
+            <TableColumn fx:id="priceCol" text="Price" />
+            <TableColumn fx:id="quantityCol" text="Quantity" />
+            <TableColumn fx:id="subtotalCol" prefWidth="120.0" text="Subtotal" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
