--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -17,7 +17,7 @@
 
 <fx:root onCloseRequest="#handleExit" title="ELISA" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <icons>
-    <Image url="@/images/ElisaImage.PNG" />
+    <Image url="@/images/ElisaImageWithoutWords.png" />
   </icons>
   <scene>
     <Scene>
