--- a/src/main/resources/view/CalendarPanel.fxml
+++ b/src/main/resources/view/CalendarPanel.fxml
@@ -2,7 +2,11 @@
 
 <?import javafx.scene.layout.*?>
 
+<?import javafx.geometry.Insets?>
 <StackPane styleClass="stack-pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:id="calendarBox">
+        <padding>
+            <Insets top="10" right="10" bottom="10" left="10" />
+        </padding>
     </VBox>
 </StackPane>
