--- a/src/main/resources/view/DiaryWindow.fxml
+++ b/src/main/resources/view/DiaryWindow.fxml
@@ -3,18 +3,20 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Scene?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.stage.Stage?>
 
-<fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-         title="Duke Cooks" minWidth="450" minHeight="600" onCloseRequest="#handleExit">
+<fx:root minHeight="600" minWidth="450" onCloseRequest="#handleExit" title="Health Records" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <icons>
-    <Image url="@/images/address_book_32.png" />
+    <Image url="@/images/man_cook.png" />
   </icons>
   <scene>
     <Scene>
@@ -32,26 +34,107 @@
             <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
           </Menu>
         </MenuBar>
+        <HBox>
+          <children>
+            <VBox prefHeight="200.0" prefWidth="100.0">
+              <children>
+                <Button fx:id="home" onAction="#switchHome" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="100.0">
+                  <padding>
+                    <Insets top="2.0" />
+                  </padding>
+                  <graphic>
+                    <ImageView fitHeight="56.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true">
+                      <image>
+                        <Image url="@../images/round_home.png" />
+                      </image>
+                    </ImageView>
+                  </graphic>
+                </Button>
+                <Button fx:id="profile" onAction="#switchProfile" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="100.0">
+                  <padding>
+                    <Insets top="2.0" />
+                  </padding>
+                  <graphic>
+                    <ImageView fitHeight="56.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true">
+                      <image>
+                        <Image url="@../images/profile.png" />
+                      </image>
+                    </ImageView>
+                  </graphic>
+                </Button>
+                <Button fx:id="recipe" onAction="#switchRecipe" contentDisplay="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="150.0" prefWidth="100.0">
+                  <padding>
+                    <Insets top="2.0" />
+                  </padding>
+                  <graphic>
+                    <ImageView fitHeight="56.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true">
+                      <image>
+                        <Image url="@../images/chef.png" />
+                      </image>
+                    </ImageView>
+                  </graphic>
+                </Button>
+                <Button fx:id="exercise" onAction="#switchExercise" contentDisplay="CENTER" layoutX="10.0" layoutY="76.0" mnemonicParsing="false" prefHeight="150.0" prefWidth="100.0">
+                  <padding>
+                    <Insets top="2.0" />
+                  </padding>
+                  <graphic>
+                    <ImageView fitHeight="56.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true">
+                      <image>
+                        <Image url="@../images/dumbell.png" />
+                      </image>
+                    </ImageView>
+                  </graphic>
+                </Button>
+                <Button fx:id="health" onAction="#switchHealth" contentDisplay="CENTER" layoutX="10.0" layoutY="143.0" mnemonicParsing="false" prefHeight="150.0" prefWidth="100.0">
+                  <padding>
+                    <Insets top="2.0" />
+                  </padding>
+                  <graphic>
+                    <ImageView fitHeight="56.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true">
+                      <image>
+                        <Image url="@../images/heartbeat.png" />
+                      </image>
+                    </ImageView>
+                  </graphic>
+                </Button>
+                <Button fx:id="diary" onAction="#switchDiary" contentDisplay="CENTER" layoutX="10.0" layoutY="209.0" mnemonicParsing="false" prefHeight="150.0" prefWidth="100.0">
+                  <padding>
+                    <Insets top="2.0" />
+                  </padding>
+                  <graphic>
+                    <ImageView fitHeight="56.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true">
+                      <image>
+                        <Image url="@../images/open-book.png" />
+                      </image>
+                    </ImageView>
+                  </graphic>
+                </Button>
+              </children>
+            </VBox>
 
-        <StackPane VBox.vgrow="NEVER" fx:id="commandBoxPlaceholder" styleClass="pane-with-border">
-          <padding>
-            <Insets top="5" right="10" bottom="5" left="10" />
-          </padding>
-        </StackPane>
-
-        <StackPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="pane-with-border"
-                   minHeight="100" prefHeight="100" maxHeight="100">
-          <padding>
-            <Insets top="5" right="10" bottom="5" left="10" />
-          </padding>
-        </StackPane>
-
-        <VBox fx:id="diaryList" styleClass="pane-with-border" minWidth="340" prefWidth="340" VBox.vgrow="ALWAYS">
-          <padding>
-            <Insets top="10" right="10" bottom="10" left="10" />
-          </padding>
-          <StackPane fx:id="diaryListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
-        </VBox>
+            <VBox>
+              <children>
+                <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border">
+                  <padding>
+                    <Insets bottom="5" left="10" right="10" top="5" />
+                  </padding>
+                </StackPane>
+                <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100.0" minHeight="100" prefHeight="100.0" styleClass="pane-with-border">
+                  <padding>
+                    <Insets bottom="5" left="10" right="10" top="5" />
+                  </padding>
+                </StackPane>
+                <VBox fx:id="personListCard" minWidth="340" prefWidth="340" styleClass="pane-with-border">
+                  <padding>
+                    <Insets bottom="10" left="10" right="10" top="10" />
+                  </padding>
+                  <StackPane fx:id="versatilePanelPlaceholder" VBox.vgrow="ALWAYS" />
+                </VBox>
+              </children>
+            </VBox>
+          </children>
+        </HBox>
 
         <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
       </VBox>
