--- a/src/main/resources/view/ItineraryWindow.fxml
+++ b/src/main/resources/view/ItineraryWindow.fxml
@@ -1,38 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Scene?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import java.net.URL?>
 
-<Scene>
-  <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <StackPane VBox.vgrow="NEVER" fx:id="commandBoxPlaceholder" styleClass="pane-with-border">
+<VBox fx:id="itineraryPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <stylesheets>
+      <URL value="@DarkTheme.css" />
+      <URL value="@Extensions.css" />
+   </stylesheets>
+   <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
+      <Menu mnemonicParsing="false" text="Itinerary">
+         <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
+      </Menu>
+   </MenuBar>
+
+   <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
       <padding>
-        <Insets top="5" right="10" bottom="5" left="10" />
+         <Insets bottom="5" left="10" right="10" top="5" />
       </padding>
-    </StackPane>
+   </StackPane>
 
-    <StackPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="pane-with-border"
-               minHeight="100" prefHeight="100" maxHeight="100">
+   <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100" minHeight="100" prefHeight="100" styleClass="pane-with-border" VBox.vgrow="NEVER">
       <padding>
-        <Insets top="5" right="10" bottom="5" left="10" />
+         <Insets bottom="5" left="10" right="10" top="5" />
       </padding>
-    </StackPane>
+   </StackPane>
 
-    <VBox fx:id="personList" styleClass="pane-with-border" minWidth="340" prefWidth="340" VBox.vgrow="ALWAYS">
+   <VBox fx:id="eventList" minWidth="340" prefWidth="340" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
       <padding>
-        <Insets top="10" right="10" bottom="10" left="10" />
+         <Insets bottom="10" left="10" right="10" top="10" />
       </padding>
-      <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
-    </VBox>
+      <StackPane fx:id="eventPlaceHolder" VBox.vgrow="ALWAYS" />
+   </VBox>
 
-    <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
-  </VBox>
-</Scene>
+   <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
+</VBox>
