--- a/src/main/resources/view/CommandBox.fxml
+++ b/src/main/resources/view/CommandBox.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
@@ -10,5 +12,13 @@
       <font>
          <Font name="Gill Sans MT Italic" size="13.0" />
       </font></TextField>
-   <Button mnemonicParsing="false" onMouseClicked="#handleCommandEntered" text="Send" StackPane.alignment="CENTER_RIGHT" />
+   <Button mnemonicParsing="false" onMouseClicked="#handleCommandEntered" text="Send" StackPane.alignment="CENTER_RIGHT">
+      <StackPane.margin>
+         <Insets bottom="1.0" />
+      </StackPane.margin></Button>
+   <Label prefHeight="24.0" prefWidth="12.0" text="&gt;" StackPane.alignment="CENTER_LEFT">
+      <StackPane.margin>
+         <Insets left="2.0" />
+      </StackPane.margin>
+   </Label>
 </StackPane>
