--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -1,53 +1,55 @@
 .background {
     -fx-background-color: derive(#1d1d1d, 20%);
-    background-color: #383838; /* Used in the default.html file */
+    background-color: #121924; /* Used in the default.html file */
 }
 
 .label {
     -fx-font-size: 11pt;
-    -fx-font-family: "Segoe UI Semibold";
+    -fx-font-family: "Gill Sans MT";
     -fx-text-fill: #555555;
     -fx-opacity: 0.9;
 }
 
 .label-bright {
     -fx-font-size: 11pt;
-    -fx-font-family: "Segoe UI Semibold";
+    -fx-font-family: "Gill Sans MT";
     -fx-text-fill: white;
     -fx-opacity: 1;
 }
 
 .label-bright-footnote {
     -fx-font-size: 8pt;
-    -fx-font-family: "Segoe UI Semibold";
+    -fx-font-family: "Gill Sans MT";
     -fx-text-fill: white;
     -fx-opacity: 1;
 }
 
 .label-bright-header {
     -fx-font-size: 16pt;
-    -fx-font-family: "Segoe UI Semibold";
+    -fx-font-family: "Gill Sans MT";
     -fx-text-fill: white;
     -fx-opacity: 1;
 }
 
 .label-header {
-    -fx-font-size: 16pt;
-    -fx-font-family: "Segoe UI Light";
-    -fx-text-fill: white;
+    -fx-font-size: 18pt;
+    -fx-font-family: "Gill Sans MT";
+    -fx-font-style: italic;
+    -fx-text-fill: #53aaf1;
     -fx-opacity: 1;
-    -fx-background-color: derive(#1d1d1d, 20%);
-    -fx-border-color: derive(#1d1d1d, 10%);
+    -fx-background-color: derive(#121924, 20%);
+    -fx-border-color: derive(#5a5a5a, 10%);
+    -fx-border-width: 0 0 2 0;
 }
 
 .text-field {
     -fx-font-size: 12pt;
-    -fx-font-family: "Segoe UI Semibold";
+    -fx-font-family: "Gill Sans MT";
 }
 
 .text-field-visit {
     -fx-font-size: 10pt;
-    -fx-font-family: "Segoe UI Light";
+    -fx-font-family: "Gill Sans MT";
 }
 
 .tab-pane {
@@ -87,7 +89,7 @@
 
 .table-view .column-header .label {
     -fx-font-size: 20pt;
-    -fx-font-family: "Segoe UI Light";
+    -fx-font-family: "Gill Sans MT";
     -fx-text-fill: white;
     -fx-alignment: center-left;
     -fx-opacity: 1;
@@ -121,11 +123,11 @@
 }
 
 .list-cell:filled:even {
-    -fx-background-color: #3c3e3f;
+    -fx-background-color: #121924;
 }
 
 .list-cell:filled:odd {
-    -fx-background-color: #515658;
+    -fx-background-color: #2e3f64;
 }
 
 .list-cell:filled:selected {
@@ -142,14 +144,14 @@
 }
 
 .cell_big_label {
-    -fx-font-family: "Segoe UI Semibold";
-    -fx-font-size: 16px;
+    -fx-font-family: "Gill Sans MT";
+    -fx-font-size: 17px;
     -fx-text-fill: #010504;
 }
 
 .cell_small_label {
-    -fx-font-family: "Segoe UI";
-    -fx-font-size: 13px;
+    -fx-font-family: "Gill Sans MT";
+    -fx-font-size: 14px;
     -fx-text-fill: #010504;
 }
 
@@ -158,8 +160,8 @@
 }
 
 .pane-with-border {
-     -fx-background-color: derive(#1d1d1d, 20%);
-     -fx-border-color: derive(#1d1d1d, 10%);
+     -fx-background-color: derive(#121924, 20%);
+     -fx-border-color: derive(#5a5a5a, 10%);
      -fx-border-top-width: 1px;
 }
 
@@ -169,7 +171,7 @@
 
 .result-display {
     -fx-background-color: transparent;
-    -fx-font-family: "Segoe UI Light";
+    -fx-font-family: "Gill Sans MT";
     -fx-font-size: 13pt;
     -fx-text-fill: white;
 }
@@ -179,7 +181,7 @@
 }
 
 .status-bar .label {
-    -fx-font-family: "Segoe UI Light";
+    -fx-font-family: "Gill Sans MT";
     -fx-text-fill: white;
     -fx-padding: 4px;
     -fx-pref-height: 30px;
@@ -187,7 +189,7 @@
 
 .status-bar-with-border {
     -fx-background-color: derive(#1d1d1d, 30%);
-    -fx-border-color: derive(#1d1d1d, 25%);
+    -fx-border-color: derive(#5a5a5a, 25%);
     -fx-border-width: 1px;
 }
 
@@ -196,7 +198,7 @@
 }
 
 .grid-pane {
-    -fx-background-color: derive(#1d1d1d, 30%);
+    -fx-background-color: derive(#121924, 30%);
     -fx-border-color: derive(#1d1d1d, 30%);
     -fx-border-width: 1px;
 }
@@ -214,12 +216,12 @@
 }
 
 .menu-bar {
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: derive(#121924, 20%);
 }
 
 .menu-bar .label {
     -fx-font-size: 14pt;
-    -fx-font-family: "Segoe UI Light";
+    -fx-font-family: "Gill Sans MT";
     -fx-text-fill: white;
     -fx-opacity: 0.9;
 }
@@ -234,12 +236,12 @@
  * http://pixelduke.wordpress.com/2012/10/23/jmetro-windows-8-controls-on-java/
  */
 .button {
-    -fx-padding: 5 22 5 22;
+    -fx-padding: 4 22 4 22;
     -fx-border-color: #e2e2e2;
-    -fx-border-width: 2;
+    -fx-border-width: 1;
     -fx-background-radius: 0;
     -fx-background-color: #1d1d1d;
-    -fx-font-family: "Segoe UI", Helvetica, Arial, sans-serif;
+    -fx-font-family: "Gill Sans MT", Helvetica, Arial, sans-serif;
     -fx-font-size: 11pt;
     -fx-text-fill: #d8d8d8;
     -fx-background-insets: 0 0 0 0, 0, 1, 2;
@@ -321,7 +323,7 @@
 }
 
 .scroll-bar:vertical .increment-arrow, .scroll-bar:vertical .decrement-arrow {
-    -fx-padding: 1 8 1 8;
+    -fx-padding: 1 5 1 5;
 }
 
 .scroll-bar:horizontal .increment-arrow, .scroll-bar:horizontal .decrement-arrow {
@@ -339,12 +341,12 @@
 }
 
 #commandTextField {
-    -fx-background-color: transparent #383838 transparent #383838;
+    -fx-background-color: #121924;
     -fx-background-insets: 0;
     -fx-border-color: #383838 #383838 #ffffff #383838;
     -fx-border-insets: 0;
     -fx-border-width: 1;
-    -fx-font-family: "Segoe UI Light";
+    -fx-font-family: "Gill Sans MT";
     -fx-font-size: 13pt;
     -fx-text-fill: white;
 }
@@ -354,7 +356,7 @@
 }
 
 #resultDisplay .content {
-    -fx-background-color: transparent, #383838, transparent, #383838;
+    -fx-background-color: transparent, #121924, transparent, #121924;
     -fx-background-radius: 0;
 }
 
