--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -3,7 +3,6 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Scene?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -17,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 
-<fx:root minHeight="600" minWidth="450" onCloseRequest="#handleExit" title="Address App" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root minHeight="600" minWidth="600" onCloseRequest="#handleExit" title="VISIT" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <icons>
     <Image url="@/images/address_book_32.png" />
   </icons>
@@ -28,8 +27,8 @@
         <URL value="@Extensions.css" />
       </stylesheets>
 
-      <VBox>
-        <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
+      <VBox prefWidth="300.0">
+        <MenuBar fx:id="menuBar" minHeight="45.0" VBox.vgrow="NEVER">
                <Menu mnemonicParsing="false">
                   <graphic>
                      <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" smooth="false">
@@ -52,23 +51,25 @@
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="241.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="200.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="700.0" vgrow="SOMETIMES" />
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
               </rowConstraints>
                <children>
-                                <VBox fx:id="personList" styleClass="pane-with-border" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="2">
+                                <VBox fx:id="personList" styleClass="pane-with-border" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="4">
                 <padding>
                   <Insets bottom="10" left="10" right="10" top="10" />
                 </padding>
                 <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS" />
               </VBox>
-                  <VBox prefWidth="466.0" styleClass="pane-with-border" GridPane.rowIndex="1" GridPane.rowSpan="2" />
-                  <Label maxWidth="1.7976931348623157E308" styleClass="label-header" text="Patients" GridPane.columnIndex="1">
+                  <VBox prefWidth="466.0" styleClass="pane-with-border" GridPane.rowIndex="1" GridPane.rowSpan="4" />
+                  <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="label-header" text="Patients" GridPane.columnIndex="1">
                      <padding>
                         <Insets left="10.0" />
                      </padding></Label>
-                  <Label maxWidth="1.7976931348623157E308" styleClass="label-header" text="Appointments">
+                  <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="label-header" text="Appointments">
                      <padding>
                         <Insets left="10.0" />
                      </padding>
@@ -76,7 +77,7 @@
                </children>
             </GridPane>
 
-        <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100" minHeight="100" prefHeight="100" styleClass="pane-with-border" VBox.vgrow="NEVER">
+        <StackPane fx:id="resultDisplayPlaceholder" minHeight="100" styleClass="pane-with-border" VBox.vgrow="NEVER">
           <padding>
             <Insets bottom="5" left="10" right="10" top="5" />
           </padding>
@@ -86,9 +87,6 @@
           <padding>
             <Insets bottom="5" left="10" right="10" top="5" />
           </padding>
-               <children>
-                  <Button mnemonicParsing="false" text="Send" translateX="105.0" />
-               </children>
         </StackPane>
       </VBox>
     </Scene>
